package edu.jhu.apl.patterns_class.builder;
import edu.jhu.apl.patterns_class.XMLTokenizer;
import edu.jhu.apl.patterns_class.XMLTokenizer.XMLToken;

// basing this implementation off of the following token list generated by Test1.xml:
// Line 1:  PROLOG_START = '<?'
// Line 1:  PROLOG_IDENTIFIER = ' xml'
// Line 1:  ATTRIBUTE = ' version='
// Line 1:  ATTRIBUTE_VALUE = '"1.0"'
// Line 1:  ATTRIBUTE = ' encoding='
// Line 1:  ATTRIBUTE_VALUE = '"UTF-8"'
// Line 1:  PROLOG_END = '?>'
// Line 2:  TAG_START = '<'
// Line 2:  ELEMENT = 'document'
// Line 2:  TAG_END = '>'
// Line 3:  TAG_START = '  <'
// Line 3:  ELEMENT = 'element'
// Line 3:  ATTRIBUTE = ' attribute='
// Line 3:  ATTRIBUTE_VALUE = '"attribute value"'
// Line 3:  NULL_TAG_END = ' />'
// Line 4:  TAG_START = '  <'
// Line 4:  ELEMENT = 'element'
// Line 4:  NULL_TAG_END = '/>'
// Line 5:  TAG_START = '  <'
// Line 5:  ELEMENT = 'element'
// Line 5:  ATTRIBUTE = ' attribute='
// Line 5:  ATTRIBUTE_VALUE = '"attribute value"'
// Line 5:  ATTRIBUTE = ' attribute2='
// Line 5:  ATTRIBUTE_VALUE = '"attribute2 value"'
// Line 5:  TAG_END = ' >'
// Line 6:  VALUE = '              Element Value'
// Line 7:  TAG_CLOSE_START = '    </'
// Line 7:  ELEMENT = 'element'
// Line 7:  TAG_END = '>'
// Line 8:  TAG_START = '  <'
// Line 8:  ELEMENT = 'element'
// Line 8:  NULL_TAG_END = '/>'
// Line 9:  TAG_CLOSE_START = '</'
// Line 9:  ELEMENT = 'document'
// Line 9:  TAG_END = '>'
// Line 10:  NULL = ''

// Director
public class DOMDirector {

    // helper
    private XMLToken getNextToken(XMLTokenizer tokenizer) {
        XMLToken	token		= null;
        try
        {
            token	= tokenizer.getNextToken();
        }
        catch (java.io.IOException e)
        {
            System.out.println("IO Exception parsing file '" +  tokenizer.getFile() + "':  " + e);
            e.printStackTrace();
        }

        System.out.println("\tLine " + tokenizer.getLineNumber() + ":  " +
            token + " = '" + (token.getToken() == null ? "" : token.getToken()) + "'");
        
        return token;
    } 

    public void buildDOMTree(DOMBuilder builder, XMLTokenizer tokenizer) {
        XMLToken	token		= null;
        do
		{
        token = getNextToken(tokenizer);        
        switch (token.getTokenType()) {
            case XMLToken.PROLOG_START:
                builder.buildDocument();
                // skip to end
                while (token.getTokenType() != XMLToken.NULL) {
                    token = getNextToken(tokenizer);
                    if (token.getTokenType() == XMLToken.PROLOG_END){
                        break;
                    }
                }
                break;
            case XMLToken.TAG_START:
                token = getNextToken(tokenizer);
                if (token.getTokenType() != XMLToken.ELEMENT) {
                    throw new IllegalArgumentException("Tag start must be followed by element token, got " + token.toString());
                }
                builder.buildElementStart(token.getToken());
                break;
            case XMLToken.NULL_TAG_END:
                builder.buildElementEnd();
                break;
            case XMLToken.ATTRIBUTE:
                String name = token.getToken();
                token = getNextToken(tokenizer);
                if (token.getTokenType() != XMLToken.ATTRIBUTE_VALUE) {
                    throw new IllegalArgumentException("Attribute must be followed by attribute value, got " + token.toString());
                }
                String val = token.getToken();
                builder.buildAttribute(name, val);
                break;
            case XMLToken.VALUE:
                builder.buildText(token.getToken());
                break;
            case XMLToken.TAG_CLOSE_START:
                builder.buildElementEnd();
                // skip to finish of this close tag
                while (token.getTokenType() != XMLToken.NULL) {
                    token = getNextToken(tokenizer);
                    if (token.getTokenType() == XMLToken.TAG_END){
                        break;
                    }
                }
                break;
            default:
                break;
        }
            
        } while (token.getTokenType() != XMLToken.NULL);
		
        
    }

}
